--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 arch: 
-#  - amd64
+  - amd64
   - ppc64le
 language: node_js
 os: linux
-node_js: node
-#script:
-#  - npm fund
+node_js: 
+  - node
+  - lts/*
